etc/tests/error/parser/lexer-c-comment-stops.ny
use std.core

// C-style comments must remain a hard lexer error, not a warning.

fn main() { 0 }
main()
